# config_stp

./: .gitattributes  .gitignore  .lsfconfig  MANIFEST.in  README.md  __init__.py  config_loader.py  config_pearl.py  last_successful_commit.txt  pyproject.toml  setup.py  test3.fits2
.github/workflows/: ci.yml  write-json.yml
config_pearl/: README.md  __init__.py  config_loader.py
config_pearl/config/: astrophysics.toml  ifs.toml  observatory.toml  telescope.toml
config_pearl/config/astrophysics/: universe.toml
config_pearl/config/coatings/: EMF_Protected_Al_T5-5103.csv  PennOpticalCoatings_DUV_Prot_Al.csv  Viavi_Prot_Al.csv  ZeCoat_300nm_Al.csv
config_pearl/config/instruments/: esc.toml
config_pearl/config/observatory/: observatory.toml
config_pearl/config/optical_designs/telescope+ifs/: throughput_baseline.ecsv
config_pearl/data/optical_designs/telescope+esc/: STP_Mark_12F11_Coronagraph_HC03.ZDA
config_pearl/support_data/optical_designs/telescope+esc/: STP_Mark_12F11_Coronagraph_HC11_1_1m_LLOWFS.STP
config_pearl/support_data/optical_designs/telescope-only/: readme.md
config_stp/: __init__.py  config_loader.py
config_stp/configs/: astrophysics.toml  observatory.toml  telescope.toml
config_stp/support_data/optical_designs/telescope+esc/: STP_Mark_12F11_Coronagraph_HC11_1_1m.STP  readme.md
config_stp/support_data/optical_designs/telescope+ifs/: dispersion_offner.ecsv
config_stp/support_data/optical_designs/telescope-only/: STP_TMA_13_03.zprj
configs/: telescope.toml
outputs/: config_stp.json
scripts/: config_to_json.py
src/config_stp/: __init__.py
src/config_stp/configs/: astrophysics.toml  config_stp.json  observatory.toml  telescope.toml
src/config_stp/support_data/archive/: README.md
src/config_stp/support_data/astrophysics/: .lsfconfig  README.md  test.fits
src/config_stp/support_data/coatings/: qe_ag_fss99_profile_mirror.fits  readme.md
src/config_stp/support_data/optical_designs/telescope+esc/: CHANGELOG.md  STP_Mark_12F11_Coronagraph_HC11_1.zar  STP_Mark_12F11_Coronagraph_HC11_1_2m.STP  STP_Mark_12F11_Coronagraph_HC11_1_2m_LLOWFS.STP
support_data/coatings/: EMF_UV_Al.csv
support_data/opds/: README.md
support_data/optical_designs/telescope-only/: STP_TMA_13_03.STP
support_data/psds/: readme.md
tests/: __init__.py  test_config_loader.py  test_config_pearl.py  test_config_stp.py  test_configs.py  test_validate_toml.py  test_version_consistency.py  validate_toml.py
