[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "config_pearl"
version = "0.1.0"
dependencies = [
    "utils_config",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config_pearl*"]

[tool.setuptools.package-data]
config_pearl = ["configs/*.toml"]
