[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "config_pearl"
description = "Master config loader for pearl project at UASAL"
readme = "README.md"
license = { text = "GNU GENERAL PUBLIC LICENSE - Verison 3" }
requires-python = ">=3.8"
dependencies = [
    "utils_config @ git+ssh://git@github.com/uasal/utils_config.git@develop" 
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/uasal/config_pearl/blob/main/README.md"
Changelog = "https://github.com/uasal/config_pearl/blob/main/CHANGELOG.md"
Repository = "https://github.com/uasal/config_pearl"

[tool.setuptools]
py-modules = ["config_pearl"]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools_scm]
write_to = "_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = [
	"tests",
]

[tool.coverage.run]
omit=["_version.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["config_pearl*"]

[tool.setuptools.package-data]
#"*" = ["configs/*.toml"]
"*" = ["support_data/**/*"]
